# StreamPDF

./: .gitignore  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  README.md  RESEARCH_METHODOLOGY.md  ROADMAP.md  STREAMPDF_VISION.md  WEEK1_EXECUTION_CHECKLIST.md  WEEK1_RESEARCH_EXECUTION.md
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: Cargo.toml
docs/: OCR_AND_PARSING_ISSUES.md  OCR_FEATURE.md  PIPELINE_VISUALIZATION.md  SEARCH_RESULTS_FILTERING.md
examples/: complete_pipeline_flow.py  ocr_integration.py
python/pystreampdf/: __init__.py  config.py  ocr.py  search.py
python/pystreampdf/semantic/: assembler.py  verifier.py
python/streampdf/: cli.py  server.py
tests/: test_semantic_phase4_3.py
