[package]
name = "streampdf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
pdfium-render = { version = "0.8", features = ["sync"] }
rusqlite = { version = "0.31", features = ["chrono", "bundled"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
sha2 = "0.10"
chrono = "0.4"

[dependencies.pyo3]
version = "0.23"
optional = true

[features]
python = ["pyo3"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
